--- a/platos/segundoplato.html
+++ b/platos/segundoplato.html
@@ -12,7 +12,7 @@
     <h1><i class="fas fa-fish"></i> Salmón al horno con patatas y cebolla</h1>
     <hr>
 
-    <h2 id="ingredientes"><i class="fas fa-carrot"></i> Ingredientes</h2>
+    <h2><i class="fas fa-carrot"></i> Ingredientes</h2>
     <ul>
         <li>2 lomos de salmón</li>
         <li>2 patatas medianas</li>
@@ -22,7 +22,7 @@
 
     <hr>
 
-    <h2 id="pasos"><i class="fas fa-concierge-bell"></i> Pasos</h2>
+    <h2><i class="fas fa-concierge-bell"></i> Pasos</h2>
     <ol>
         <li>Pelar y cortar <b>2</b> patatas en rodajas finas.<br><img src="imagenes/paso1-salmon.jpg" alt="Patatas cortadas" width="200"></li>
         <li>Cortar <b>1</b> cebolla en juliana y colocar junto a las patatas en una fuente.<br><img src="imagenes/paso2-salmon.jpg" alt="Patatas y cebolla" width="200"></li>
@@ -32,7 +32,7 @@
 
     <hr>
 
-    <h2 id="resultado"><i class="fas fa-check-circle"></i> Resultado final</h2>
+    <h2><i class="fas fa-check-circle"></i> Resultado final</h2>
     <img src="imagenes/salmon.jpg" alt="Salmón al horno con patatas y cebolla" width="500">
 </body>
 </html>
