--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
     <h1><i class="fas fa-utensils"></i> Cómo preparar un menú saludable</h1>
     <ul>
-        <li><a href="/platos/primerplato.html"><i class="fa-solid fa-bacon"></i> Primer plato: Espaguetis carbonara</a></li>
+        <li><a href="platos/primerplato.html"><i class="fa-solid fa-bacon"></i> Primer plato: Espaguetis carbonara</a></li>
         <img src="imagenes/espaguetis.jpg" alt="Espaguetis carbonara" height="100">
         
-        <li><a href="/platos/segundoplato.html"><i class="fas fa-fish"></i> Segundo plato: Salmón al horno con patatas y cebolla</a></li>
+        <li><a href="platos/segundoplato.html"><i class="fas fa-fish"></i> Segundo plato: Salmón al horno con patatas y cebolla</a></li>
         <img src="imagenes/salmon.jpg" alt="Salmón al horno" height="100">
 
-        <li><a href="/platos/postre.html"><i class="fas fa-ice-cream"></i> Postre: Pieza de fruta a elejir</a></li>
+        <li><a href="platos/postre.html"><i class="fas fa-ice-cream"></i> Postre: Pieza de fruta a elejir</a></li>
         <img src="imagenes/platano.jpg" alt="Plátano al horno" height="100">
     </ul>
 </body>
