--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <h1><i class="fas fa-utensils"></i> Cómo preparar un menú saludable</h1>
     <ul>
         <li><a href="platos/primerplato.html"><i class="fa-solid fa-bacon"></i> Primer plato: Espaguetis carbonara</a></li>
-        <img src="imagenes/espaguetis.jpg" alt="Espaguetis carbonara" height="100">
+            <img src="img/espaguetis.jpg" alt="Espaguetis carbonara" height="350">
         
         <li><a href="platos/segundoplato.html"><i class="fas fa-fish"></i> Segundo plato: Salmón al horno con patatas y cebolla</a></li>
-        <img src="imagenes/salmon.jpg" alt="Salmón al horno" height="100">
+            <img src="img/salmon.jpg" alt="Salmón al horno" height="350">
 
-        <li><a href="platos/postre.html"><i class="fas fa-ice-cream"></i> Postre: Pieza de fruta a elejir</a></li>
-        <img src="imagenes/platano.jpg" alt="Plátano al horno" height="100">
+        <li><a href="platos/postre.html"><i class="fas fa-ice-cream"></i>Postre: Yogur con frutas y miel</a></li>
+            <img src="img/miel.png" alt="Postre: Yogur con frutas y miel" height="350">
     </ul>
 </body>
 </html>
