--- a/platos/postre.html
+++ b/platos/postre.html
@@ -2,27 +2,50 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Postre: Pieza de fruta a elejir</title>
-    <link rel="icon" href="img/favicon.png" type="image/png">
+    <title>Postre: Yogur con frutas y miel</title>
+    <link rel="icon" type="image/png" href="imagenes/favicon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
-
+<body>
+  
     <a href="../index.html"><i class="fa-solid fa-arrow-left"></i></a>
 
-    <h1><i class="fa-solid fa-apple-whole"></i> Postre: Pieza de fruta a elejir</h1>
+    <h1><i class="fa-solid fa-ice-cream"></i> Postre: Yogur con frutas y miel</h1>
 
     <hr>
 
     <h2><i class="fa-solid fa-carrot"></i> Ingredientes</h2>
     <ul>
-        <li>1 Pieza de fruta a elejir</li>
+        <li>1 yogur natural o griego sin azúcar</li>
+        <li>1/2 plátano</li>
+        <li>1/2 manzana</li>
+        <li>Un puñado de frutos rojos (fresas, moras, arándanos...)</li>
+        <li>1 cucharadita de miel</li>
+        <li>Unas hojas de menta (opcional)</li>
     </ul>
 
     <hr>
 
-    <h2><i class="fa-solid fa-check-circle"></i> Resultado final</h2>
-    <p>El postre consiste simplemente en una pieza de fruta fresca, lista para comer, una opción natural y saludable para acabar el menu.</p>
-    <img src="imagenes/platano.jpg" alt="Plátano" width="500">
+    <h2><i class="fa-solid fa-bell-concierge"></i> Pasos</h2>
+    <ol>
+        <li>Cortar <b>1/2 manzana</b> y <b>1/2 plátano</b> en trozos pequeños.<br>
+            <img src="../img/platanosymanzanas.png" alt="Cortando frutas" width="200">
+        </li>
+        <li>Colocar el <b>yogur</b> en un bol o vaso bonito.<br>
+            <img src="../img/yougurt.png" alt="Yogur en bol" width="200">
+        </li>
+        <li>Añadir por encima la fruta cortada y los <b>frutos rojos</b>.<br>
+            <img src="../img/yougurtfruta.png" alt="Frutas sobre yogur" width="200">
+        </li>
+        <li>Verter <b>1 cucharadita</b> de miel y decorar con menta si se desea.<br>
+            <img src="../img/miel.png" alt="Yogur con frutas y miel terminado" width="200">
+        </li>
+    </ol>
 
+    <hr>
+
+    <h2><i class="fa-solid fa-check-circle"></i> Resultado final</h2>
+    <p>Un postre fresco, ligero y muy saludable: yogur con frutas y miel, ideal para cerrar un menú equilibrado.</p>
+    <img src="../img/miel.png" alt="Yogur con frutas y miel" width="500">
 </body>
 </html>
