--- a/platos/primerplato.html
+++ b/platos/primerplato.html
@@ -25,16 +25,16 @@
 
     <h2><i class="fas fa-concierge-bell"></i> Pasos</h2>
     <ol>
-        <li>Cocer <b>200g</b> de espaguetis en agua con sal durante 8-10 minutos.<br><img src="imagenes/paso1-espaguetis.jpg" alt="Cociendo espaguetis" width="200"></li>
-        <li>Freír <b>100g</b> de bacon hasta que esté dorado.<br><img src="imagenes/paso2-espaguetis.jpg" alt="Bacon frito" width="200"></li>
-        <li>Batir <b>2</b> huevos con <b>50g</b> de parmesano y un poco de pimienta.<br><img src="imagenes/paso3-espaguetis.jpg" alt="Huevos batidos" width="200"></li>
-        <li>Mezclar todo con los espaguetis calientes y servir inmediatamente.<br><img src="imagenes/paso4-espaguetis.jpg" alt="Espaguetis carbonara listos" width="200"></li>
+        <li>Cocer <b>200g</b> de espaguetis en agua con sal durante 8-10 minutos.<br><img src="../img/paso1-espaguetis.png" alt="Cociendo espaguetis" width="200"></li>
+        <li>Freír <b>100g</b> de bacon hasta que esté dorado.<br><img src="../img/paso2-espaguetis.jpg" alt="Bacon frito" width="200"></li>
+        <li>Batir <b>2</b> huevos con <b>50g</b> de parmesano y un poco de pimienta.<br><img src="../img/paso3-espaguetis.jpg" alt="Huevos batidos" width="200"></li>
+        <li>Mezclar todo con los espaguetis calientes y servir inmediatamente.<br><img src="../img/paso4-espaguetis.jpg" alt="Espaguetis carbonara listos" width="200"></li>
     </ol>
 
     <hr>
 
     <h2><i class="fas fa-check-circle"></i> Resultado final</h2>
-    <img src="imagenes/espaguetis.jpg" alt="Espaguetis carbonara" width="500">
+    <img src="../img/espaguetis.jpg" alt="Espaguetis carbonara" width="500">
 </body>
 </html>
 
