--- a/platos/segundoplato.html
+++ b/platos/segundoplato.html
@@ -24,15 +24,15 @@
 
     <h2><i class="fas fa-concierge-bell"></i> Pasos</h2>
     <ol>
-        <li>Pelar y cortar <b>2</b> patatas en rodajas finas.<br><img src="imagenes/paso1-salmon.jpg" alt="Patatas cortadas" width="200"></li>
-        <li>Cortar <b>1</b> cebolla en juliana y colocar junto a las patatas en una fuente.<br><img src="imagenes/paso2-salmon.jpg" alt="Patatas y cebolla" width="200"></li>
-        <li>Colocar los <b>2</b> lomos de salmón encima, añadir aceite, sal y pimienta.<br><img src="imagenes/paso3-salmon.jpg" alt="Salmón preparado" width="200"></li>
-        <li>Hornear a <b>180°C</b> durante 20 minutos.<br><img src="imagenes/paso4-salmon.jpg" alt="Salmón horneado" width="200"></li>
+        <li>Pelar y cortar <b>2</b> patatas en rodajas finas.<br><img src="../img/patatas.jpg" alt="Patatas cortadas" width="200"></li>
+        <li>Cortar <b>1</b> cebolla en juliana y colocar junto a las patatas en una fuente.<br><img src="../img/cebolla.jpg" alt="Patatas y cebolla" width="200"></li>
+        <li>Colocar los <b>2</b> lomos de salmón encima, añadir aceite, sal y pimienta.<br><img src="../img/salmonfuente.png" alt="Salmón preparado" width="200"></li>
+        <li>Hornear a <b>180°C</b> durante 20 minutos.<br></li>
     </ol>
 
     <hr>
 
     <h2><i class="fas fa-check-circle"></i> Resultado final</h2>
-    <img src="imagenes/salmon.jpg" alt="Salmón al horno con patatas y cebolla" width="500">
+    <img src="../img/salmon.jpg" alt="Salmón al horno con patatas y cebolla" width="500">
 </body>
 </html>
